@@ -8,7 +8,6 @@ import java.io.IOException;
 import java.net.*;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 @Slf4j
@@ -17,7 +16,7 @@ public class NetworkingUtils {
     public static List<InetAddress> getAllIpsForHost(String host) throws UnknownHostException {
         return Arrays.stream(InetAddress.getAllByName(host))
                 .filter(Inet4Address.class::isInstance)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static boolean isHostTcpPortReachable(String host, int port, int timeOutMillis)  {
